softwareFeatureRequest/force-app/main/default/objects/Software_Feature_Request__c/Software_Feature_Request__c.object-meta.xml
<CustomObject>
    <label>Software Feature Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Software Feature Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Feature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>