softwareFeatureRequest/force-app/main/default/objects/Software_Feature_Request__c/fields/Related_Files__c.field-meta.xml
<CustomField>
    <fullName>Related_Files__c</fullName>
    <description>List of Titles of all related files for record</description>
    <label>Related Files</label>
    <length>255</length>
    <type>Text</type>
</CustomField>