softwareFeatureRequest/force-app/main/default/objects/Software_Feature_Request__c/fields/Software_Product__c.field-meta.xml
<CustomField>
    <fullName>Software_Product__c</fullName>
    <label>Software Product</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>