softwareFeatureRequest/force-app/main/default/objects/Software_Feature_Request__c/listViews/My_Software_Feature_Requests.listView-meta.xml
<ListView>
    <fullName>My_Software_Feature_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Software Feature Requests</label>
</ListView>