softwareFeatureRequest/force-app/main/default/objects/Software_Feature_Request__c/listViews/Software_Feature_Request_Queue_Software_Feature_Request.listView-meta.xml
<ListView>
    <fullName>Software_Feature_Request_Queue_Software_Feature_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Software Feature Request Queue</label>
    <queue>Software_Feature_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>